crates/keron-lang/tests/corpus/errors/check/for_as_value_position.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `for` has type `Void` and does not produce a value
  --> 1:27
  |
1 | val label: String = match for k in [1, 2] {} {
  |                           ^^^^^^^^^^^^^^^^^^^
  = help: use `for` at statement position rather than in a value position (match scrutinee, val initializer, argument)
